--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -1485,7 +1485,7 @@
     "2. Random Forest Classifier\n",
     "3. Gradient Boosting Trees\n",
     "\n",
-    "The dataset is split into training and validation data in a ration of 90% to 10%. Also we find the best hyperparameters for each of the models using grid search."
+    "The dataset is split into training and validation data in a ratio of 90% to 10%. Also we find the best hyperparameters for each of the models using grid search."
    ]
   },
   {
